Fixed white space issue

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -13,7 +13,7 @@ body {
 
 .full-size {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .full-width {
